Increasing contrast of table headers (https://bugify.idfive.com/issues/23374), event block time/location strings (https://bugify.idfive.com/issues/23373), and inactive tabs in tab panel component (https://bugify.idfive.com/issues/23375)

--- a/static/src/components/pages/profile-detail/_profile-detail.scss
+++ b/static/src/components/pages/profile-detail/_profile-detail.scss
@@ -5,6 +5,7 @@
   font-size: rem(17);
   padding: rem(72) rem(30);
   a {
+    color: #de1732; // Slightly darker than standard to meet AA compliance
     text-decoration: underline;
   }
   li {
